fix moderator pill alignment

--- a/src/components/event-card/speakers/index.module.scss
+++ b/src/components/event-card/speakers/index.module.scss
@@ -75,6 +75,7 @@
   .moderator {
     font-size: 12px;
     background-color: var(--color_alerts) !important;
+    margin-top: -2px;
   }
 
   .job {
